[526521] Added documentation for transformation development

--- a/documentation/org.eclipse.viatra.documentation.help/src/main/asciidoc/releases/viatra-1.2.adoc
+++ b/documentation/org.eclipse.viatra.documentation.help/src/main/asciidoc/releases/viatra-1.2.adoc
@@ -1,6 +1,6 @@
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
-ifndef::rootdir[:rootdir: ./]
-ifndef::imagesdir[{rootdir}/../images]
+ifndef::rootdir[:rootdir: .]
+ifndef::imagesdir[:imagesdir: {rootdir}/../images]
 [[viatra-12]]
 = VIATRA 1.2
 
