--- a/documentation/org.eclipse.viatra.documentation.help/src/main/asciidoc/releases.adoc
+++ b/documentation/org.eclipse.viatra.documentation.help/src/main/asciidoc/releases.adoc
@@ -17,6 +17,7 @@ This page includes detailed information about the various releases of VIATRA, in
 
 toc::[]
 
+include::releases/viatra-1.7.adoc[leveloffset=+1]
 include::releases/viatra-1.6.adoc[leveloffset=+1]
 include::releases/viatra-1.5.adoc[leveloffset=+1]
 include::releases/viatra-1.4.adoc[leveloffset=+1]
